<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appenings</string>
    <string name="loginHeaderLogo">loginHeaderLoge</string>
    <string name="registerHeaderLogo">registerHeaderLogo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="serverUrl">http://10.0.2.2:8088/da/api</string>
    <string-array name="menu_items">
        <item>Home</item>
        <item>Jossi</item>
        <item>Is</item>
        <item>An</item>
        <item>ASS</item>
    </string-array>
    <string name="follow">Follow</string>
    <string name="logo_text">Appenings</string>
    <string name="new_user_text">Sign up for Appenings</string>
    <string name="old_user_text">Already have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reenter_password">Reenter password</string>
    
    

</resources>
